--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center justify-content-between px-4 py-2 mt-4">
         <span class="font-20 fw-600">{{currNode.name ? currNode.name : 'Properties'}}</span>
         <div class="d-flex">
-            <button type="button" class="btn btn-link" (click)="deleteNode()">
+            <button *ngIf="!isInputNode" type="button" class="btn btn-link" (click)="deleteNode()">
                 <span class="dsi dsi-trash text-danger"></span>
             </button>
             <button type="button" class="btn btn-link" (click)="cancel()">
