--- a/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
@@ -56,14 +56,14 @@
             <label for="count">Count</label>
             <!-- <input id="count" type="number" class="form-control dynamic-variable-addon"
                 [(ngModel)]="currNode.options.count"> -->
-            <odp-node-data-selector [nodeList]="nodeList" [(value)]="currNode.options.count">
+            <odp-node-data-selector [nodeList]="nodeList" [number]="true" [(value)]="currNode.options.count">
             </odp-node-data-selector>
         </div>
         <div class="form-group position-relative ">
             <label for="page">Page</label>
             <!-- <input id="page" type="number" class="form-control dynamic-variable-addon"
                 [(ngModel)]="currNode.options.page"> -->
-            <odp-node-data-selector [nodeList]="nodeList" [(value)]="currNode.options.page">
+            <odp-node-data-selector [nodeList]="nodeList" [number]="true" [(value)]="currNode.options.page">
             </odp-node-data-selector>
         </div>
         <div class="form-group position-relative ">
