--- a/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
@@ -21,9 +21,8 @@
     <div class="d-flex align-items-center justify-content-start">
         <span class="fw-500 badge badge-info font-12 my-3"> {{userSelectedValue}}</span>
     </div>
-
     <div class="d-flex align-items-center justify-content-between mt-3">
-        <button type="button" class="undo-btn btn btn-light d-flex align-items-center mr-3 border" (click)="stepBack()">
+        <button *ngIf="configuredData.node || configuredData.customValue" type="button" class="undo-btn btn btn-light d-flex align-items-center mr-3 border" (click)="stepBack()">
             <span class="dsi dsi-drop-down fa-rotate-90"></span>
             <span>Step Back</span>
         </button>
